# NumCPP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: NDArray.md
include/: Array.hpp  Array.tpp  Matrix.hpp  Matrix.tpp  NDArray.hpp  NDArray.tpp  NumCPP.hpp  SquareMatrix.hpp  SquareMatrix.tpp
test/Array/: arithmetic_operators.cpp  basic_properties.cpp  constructors.cpp  element_access.cpp  private.cpp
test/NDArray/: Access.cpp  ConDes.cpp  Modify.cpp  Prop.cpp  arithmetic_operators.cpp  basic_properties.cpp  constructors.cpp  element_access.cpp  modify_array.cpp  private.cpp  return_modifed.cpp
